# mqtt_web

./: .gitignore
esp32/mqtt5/main/: CMakeLists.txt  app_main.c  idf_component.yml
server/: CMakeLists.txt  CMakePresets.json  main.c
server/components/mqtt/: CMakeLists.txt  mqtt.c  mqtt.h
server/components/my_device_manager/: CMakeLists.txt  my_device_manager.c  my_device_manager.h
server/components/my_mqtt/: CMakeLists.txt  my_mqtt.c  my_mqtt.h
server/components/my_queue/: CMakeLists.txt  my_queue.c  my_queue.h
server/components/my_thread/: CMakeLists.txt  my_thread.c  my_thread.h
server/components/my_web_server/: CMakeLists.txt  my_web_server.c  my_web_server.h
server_copy/: CMakeLists.txt  main.c
server_copy/components/mqtt/: mqtt.c
server_copy/components/my_device_manager/: CMakeLists.txt  my_device_manager.c  my_device_manager.h
server_copy/components/my_queue/: my_queue.c  my_queue.h
server_copy/components/my_thread/: CMakeLists.txt  my_thread.c  my_thread.h
server_copy/components/my_web_server/: CMakeLists.txt  my_web_server.c  my_web_server.h
web/: 1添加灯其他字段.html  2添加灯其他字段+rgb.html  3所有都加大灯.html  4加模式选择.html  index.html  mqtt转发cmd到info.py  openai_style.html  rgb.html  添加灯其他字段.html
